# surya_workshop

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  environment_cpu.yml  pyproject.toml
data/: create_csv_index.py
downstream_apps soyed/template/: 0_dataset_dataloader_template.ipynb  0_dataset_dataloader_template_Euv.ipynb
downstream_apps/Imagetranslation/: 0_euv2mag_dataset_dataloader.ipynb  1_euv2mag_baseline.ipynb  2_euv2mag_finetune.ipynb
downstream_apps/andong/: 0_dataset_dataloader_template_andong.ipynb  1_baseline_template_andong.ipynb  2_finetune_template_1D_andong.ipynb  Main_dst.ipynb  Main_dst.py  compare_results.py
downstream_apps/haodi/: 0_dataset_dataloader_template.ipynb  0_dataset_dataloader_template_haodi.ipynb  1_baseline_template.ipynb  2_finetune_template_1D.ipynb  2_finetune_template_1D_HJ.ipynb  2_finetune_template_1D_HJ_true_1D copy.ipynb  2_finetune_template_1D_HJ_true_1D.ipynb  2_finetune_template_1D_HJ_true_1D_testing_added copy.ipynb  2_finetune_template_1D_HJ_true_1D_with_checkpoints.ipynb  3_finetune_template_1D_hj.py  test_checkpoint_eval.py
downstream_apps/ribbons/: 0_dataset_dataloader.ipynb  1_baseline.ipynb  2_finetune.ipynb
downstream_apps/solar_scorpion/: 0_dataset_dataloader_template.ipynb  1_baseline_template.ipynb  2_finetune_template_1D.ipynb
downstream_apps/template/: 0_dataset_dataloader_eve.ipynb  0_dataset_dataloader_template.ipynb  (+16 more)
workshop_infrastructure/: utils.py
wsa_surya_training/: inspector_script.py  plot_results.py  plot_results_new.py  wsa_train.py  wsa_train_new.py
(+129 files in other folders)
