[project]
name = "surya-workshop-copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.6.0",
    "dask>=2025.12.0",
    "einops>=0.8.1",
    "h5netcdf>=1.7.3",
    "huggingface-hub>=1.3.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.3.3",
    "s3fs>=2026.1.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sunpy>=7.1.0",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
    "xarray>=2025.12.0",
]
